<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bookhub2</string>
    <string name="dashboard">dashboard</string>
    <string name="favourites">favourites</string>
    <string name="profile">profile</string>
    <string name="about_app">about_app</string>
    <string name="navigation_drawer">Navigation drawer</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutapp">aboutapp</string>
    <string name="dashboard_fragment">Dashboard_fragment</string>
    <string name="favourites_fragment">Favourites fragment</string>
    <string name="aboutapp_fragment">AboutApp Fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="list_item">List Item</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="rs_299">Rs. 299</string>
    <string name="_4_5">4.5</string>
    <string name="check_internet">Check Internet</string>
    <string name="about_the_book">About the book:</string>
    <string name="add_to_favourites">Add to Favourites</string>

</resources>