<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.DescriptionActivity"
    android:background="#ffffff">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
        android:layout_below="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/llcontent"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:weightSum="6">
                <ImageView
                    android:id="@+id/imgBookImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:src="@mipmap/ic_launcher"
                    android:padding="5dp"
                    android:scaleType="centerCrop"/>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">
                <TextView
                    android:id="@+id/txtBookName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_the_book"
                    android:paddingTop="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000" />
                <TextView
                    android:id="@+id/txtBookAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtBookName"
                    android:layout_weight="1.2"
                    android:text="@string/name_of_the_author"
                    android:paddingTop="8dp"
                    android:textSize="15sp"/>
                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtBookAuthor"
                        android:paddingTop="8dp"
                        android:text="@string/rs_299" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/txtBookRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:paddingTop="8dp"
                    android:text="@string/_4_5"
                    android:drawableLeft="@drawable/ic_star"
                    android:drawablePadding="4dp"/>

            </LinearLayout>
            <RelativeLayout
                android:layout_below="@id/llcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txtAboutTheBookStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="6dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:text="@string/about_the_book"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"/>
                <TextView
                    android:id="@+id/Descbook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtAboutTheBookStatic"
                    android:padding="6dp"
                    android:textSize="18sp"
                    android:text="hello blank fragment"
                    android:layout_margin="10dp"
                    android:textColor="#000000"/>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
<Button
    android:id="@+id/btnAddtofavourites"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
  android:background="@color/colorPrimary"
    android:text="@string/add_to_favourites"
    android:textSize="15sp"
    android:textStyle="bold"
    android:textColor="#ffffff"/>
    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    </ProgressBar>

    </RelativeLayout>
</RelativeLayout>